# nomad-example

./: README.md  pyproject.toml
src/nomad_example/apps/: __init__.py
src/nomad_example/normalizers/: __init__.py  mynormalizer.py
src/nomad_example/parsers/: __init__.py  myparser.py
src/nomad_example/schema_packages/: __init__.py  mypackage.py
tests/parsers/: test_myparser.py
